--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
       margin: 0;
       padding: 0;
     }
+    html, body {
+      height: 100%;
+      overflow: hidden;
+    }
     body {
       font-family: Arial, sans-serif;
       background-color: #0f0f0f;
       color: #fff;
       display: flex;
       justify-content: center;
-      align-items: flex-start;
-      min-height: 100vh;
-      padding: 20px;
+      align-items: center;
+      padding: 0;
     }
     .layout-wrapper {
       display: flex;
-      justify-content: center;
       width: 100%;
       max-width: 1600px;
+      height: 100vh;
     }
     #live-stats {
       flex-shrink: 0;
@@ -89,10 +92,6 @@
       font-size: 1.3rem;
     }
     @media (max-width: 768px) {
-      body {
-        padding: 10px;
-        flex-direction: column;
-      }
       .layout-wrapper {
         flex-direction: column;
         align-items: center;
@@ -105,11 +104,12 @@
       }
       #app-frame {
         width: 100%;
-        height: auto;
+        height: 100%;
+        border-radius: 0;
       }
     }
 
-    /* App-Specific Styles (unchanged) */
+    /* Original styles */
     header {
       display: flex;
       align-items: center;
