--- a/search.html
+++ b/search.html
@@ -155,12 +155,7 @@
       font-size: 1.3rem;
       margin-right: 0.3rem;
     }
-    @media (max-width: 768px) {
-  .layout-wrapper {
-    flex-direction: column;
-    align-items: center;
-  }
-
+   @media (max-width: 768px) {
   #live-stats {
     position: fixed;
     top: 0;
@@ -172,8 +167,8 @@
     font-size: 0.75rem;
     background-color: #1a1a1a;
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 2 columns */
-    grid-template-rows: repeat(5, auto);   /* 5 rows */
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, auto);
     text-align: center;
     border-radius: 0;
     transform: translateY(0);
@@ -183,18 +178,22 @@
   }
 
   .stats-spacer {
-    height: 70px;
+    height: 70px; /* go back to 70px */
     width: 100%;
+    flex-shrink: 0;
   }
 
   .content-wrapper {
-    padding-top: 0px; /* ensures you don't overlap after the stats spacer */
+    padding-top: 0;
     padding-bottom: 80px;
+    overflow-y: auto;
   }
 
   #app-frame {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
     border-radius: 0;
   }
 
@@ -207,6 +206,7 @@
     border-bottom-right-radius: 0;
   }
 }
+
 
   </style>
   <script src="https://unpkg.com/lucide@latest"></script>
@@ -230,8 +230,8 @@
 
     <!-- App Frame -->
     <div id="app-frame">
+       <div class="stats-spacer"></div>
       <div class="content-wrapper">
-        <div class="stats-spacer"></div>
         <h2>Accounts</h2>
         <div id="account-container"></div>
         <button id="toggleAccounts" onclick="toggleAccountView()">Show More</button>
